# prime-lib

./: .gitignore  Cargo.toml
.cargo/: config.toml
benches/: benchmarks.rs
src/: counting.rs  lib.rs
