[package]
name = "primes"
version = "0.1.0"
edition = "2021"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "deny"
pedantic = "deny"
nursery = "deny"

[dependencies]
tracing = "0.1.40"
bitvec = "1.0"

[dev-dependencies]
rstest = "0.18"
rstest_reuse = "0.6"
criterion = {version = "0.5", features = ["html_reports"]}

[[bench]]
name = "prime-bench"
path = "benches/benchmarks.rs"
harness = false
