[package]
name = "primes"
version = "0.1.0"
edition = "2024"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "deny"
pedantic = "deny"
nursery = "deny"

[dependencies]
tracing = "0.1.40"

[dev-dependencies]
rstest = "0.26"
rstest_reuse = "0.7"
criterion = "0.8"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.flamegraph]
debug = 2
inherits = "release"
strip = "none"

[[bench]]
name = "prime-bench"
path = "benches/benchmarks.rs"
harness = false
